chore: update resume

--- a/index.html
+++ b/index.html
@@ -222,15 +222,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Open Source</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  OpenSwiftUI based on SwiftUI framework from Apple.
                 </p>
               </div>
 
@@ -271,14 +270,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-design.svg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Design</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  UI/UX using Figma.
                 </p>
               </div>
 
@@ -298,14 +297,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Helbert Gomes" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/user_fill.svg" alt="Mateus Sousa" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Helbert Gomes</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Mateus Sousa</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur nibh eget feugiat facilisis. Phasellus id commodo erat. Praesent luctus elit non nibh dictum blandit. Aenean congue convallis velit, vitae vulputate est iaculis a. Sed molestie orci ut nulla ultricies, vitae pellentesque purus hendrerit. 
+                    Highly dedicated professional who always seeks excellence in their work. In addition to possessing extensive experience in the field of software engineering, he's always willing to share knowledge and collaborate with everyone around them. Besides technical expertise, their communication skills, negotiation abilities, and business vision are significant differentiators.
                   </p>
                 </div>
 
@@ -316,50 +315,14 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-2.png" alt="Helbert Gomes" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/user_fill.svg" alt="Paulo Gama" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Helbert Gomes</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Paulo Gama</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur nibh eget feugiat facilisis. Phasellus id commodo erat. Praesent luctus elit non nibh dictum blandit. Aenean congue convallis velit, vitae vulputate est iaculis a. Sed molestie orci ut nulla ultricies, vitae pellentesque purus hendrerit. 
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Helbert Gomes" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Helbert Gomes</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur nibh eget feugiat facilisis. Phasellus id commodo erat. Praesent luctus elit non nibh dictum blandit. Aenean congue convallis velit, vitae vulputate est iaculis a. Sed molestie orci ut nulla ultricies, vitae pellentesque purus hendrerit. 
-                  </p>
-                </div>
-
-              </div>
-            </li>
-
-            <li class="testimonials-item">
-              <div class="content-card" data-testimonials-item>
-
-                <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.png" alt="Helbert Gomes" width="60" data-testimonials-avatar>
-                </figure>
-
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Helbert Gomes</h4>
-
-                <div class="testimonials-text" data-testimonials-text>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus efficitur nibh eget feugiat facilisis. Phasellus id commodo erat. Praesent luctus elit non nibh dictum blandit. Aenean congue convallis velit, vitae vulputate est iaculis a. Sed molestie orci ut nulla ultricies, vitae pellentesque purus hendrerit. 
+                    Helbert is a very dedicated professional and enthusiastic about learning new technologies and applying them in everyday life. He has the ability to study the team's needs and challenges and try to resolve that situation in an innovative and disruptive way.
                   </p>
                 </div>
 
@@ -458,10 +421,6 @@
 
       </article>
 
-
-
-
-
       <!--
         - #RESUME
       -->
@@ -479,104 +438,24 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">Education</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Sr iOS Engineer - PicPay </h4>
+              <h4 class="h4 timeline-item-title">Pontifícia Universidade Católica de Minas Gerais (PUC Minas)</h4>
 
-              <span>2021 — 2023</span>
-
-              <p class="timeline-text">
-                PicPay is a local Brazilian payment app that allows consumers to send money not only to their friends but also to
-                accredited businesses
-                <br />* Performed design system in order to solve internal demands, understand business needs, and recommend the best
-                solutions technically, addressing Developer teams and participating in scrum ceremonies to achieve company goals.
-                <br />* Led design System squad developing and integration between the Design System squad and others, creating a standard process ensuring productivity.
-                <br />* Participated in meetings, reviewing process, and developing process and work procedures to help the organization follow this process.
-                <br />
-                <br />* The main technologies and tools used were Swift, Fastlane, SwiftLint, XCodeGen, SwiftGen, SwiftLint, Bitrise, Bazel, Tekton, and Grafana.
-              </p>
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">iOS Engineer - ThoughtWorks</h4>
-              <span>2019 — 2021</span>
+              <span>2011 — 2016</span>
 
               <p class="timeline-text">
-                Worked with client-facing commitments advocating for software quality, readability, and maintainability with the usage of practices such as Test-Driven Development, Continuous Integration, and Continuous Delivery, acting also as Tech Lead
-                <br />* Understanding customer needs, solving conflicts, and helping to maintain, improve, and build new application features and frameworks for iOS and tvOS. Helping to build a CI / CD environment for iOS and tvOS using Bitrise
-                <br />* Being a squad development Tech Lead supporting people journeys and communicating with other client teams and stakeholders. 
-                <br />
-                <br />The main technologies and tools used were Swift, AVFoundation, AVKit, Fastlane, Firebase, Nimble, Quick, Swift Package Manager, CocoaPods, XcodeGen, SwiftLint, SwiftGen, Bitrise, GitLab-CI, and GitHub Actions.
-              </p>
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Sr iOS Engineer - Sympla</h4>
-              <span>2017 — 2019</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Digital Games
               </p>
 
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Sr iOS Engineer - Sympla</h4>
-              <span>2017 — 2019</span>
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Sr iOS Engineer - Mobilus</h4>
-              <span>2015 — 2017</span>
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Game Developer - Meatballs</h4>
-              <span>2014</span>
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Game Developer - Gaz Games</h4>
-              <span>2013 — 2014</span>
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-            </li>
-
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Software Engineer - Telbrax</h4>
-              <span>2011 — 2013</span>
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
             </li>
           </ol>
+
         </section>
 
         <section class="timeline">
@@ -586,27 +465,106 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">Experience</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">PUC Minas - Digital Game Development</h4>
+              <h4 class="h4 timeline-item-title">Sr iOS Engineer (Tech Lead) - PicPay</h4>
 
-              <span>2011 — 2016</span>
+              <span>2021 — 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Acted as technical leader of the Design System team. 
+                <br /> Responsibilities: 
+                <br /> * Understanding the business needs of the other teams;
+                <br /> * Participating in the component Discovery and Prototyping stages with the Tech Manager, Project Manager and Designers;
+                <br /> * Understand accessibility requirements with the Accessibility and Design System teams;
+                <br /> * Developing iOS components using Atomic Design;
+                <br /> * Maintaining component compliance for iOS, Android and Web;
+                <br /> * Participating in the component documentation process;
+                <br /> * Participating in the process of publishing components for iOS;
+                <br /> * Participating in the planning of Sprints and OKRs;
+                <br /> * Supporting other teams in the use of Design System components;
+                <br /> * Mentoring;
+<br /> 
+                <br /> Worked as a developer in the Mobile iOS Infrastructure team
+                <br /> Responsibilities:
+                <br /> * Planning and implementing rules for SwiftLint
+                <br /> * Planning and restructuring pipelines
+                <br /> * Planning rules related to test coverage
+                <br /> * Implementing scripts for the Build System using Bazel
+                <br />
+                <br /> * Key technologies and tools used were <b>Swift, Objective-C, Python, Bash, XCodeGen, SwiftGen, SwiftLint, Swift Package Manager, Fastlane, Bazel, Bitrise, Tekton, and Gihub Actions.</b>
               </p>
+            </li>
 
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">iOS Engineer (Tech Lead) - ThoughtWorks</h4>
+              <span>2019 — 2021</span>
+
+              <p class="timeline-text">
+                * Work with customer-facing engagements to advocate for the quality, readability, and maintainability of software through the use of practices such as test-driven development, continuous integration, and continuous delivery, and also act as a tech lead.
+                <br>* Understand customer needs, resolve conflicts, and help maintain, improve, and build new application features and frameworks for iOS and tvOS. Help build a CI / CD environment for iOS and tvOS using Bitrise.
+                <br>* Serve as a squad development tech lead, supporting people journeys and communicating with other client teams and stakeholders. 
+
+                <br>Key technologies and tools used were <b>Swift, AVFoundation, AVKit, Fastlane, Firebase, Nimble, Quick, Swift Package Manager, CocoaPods, XcodeGen, SwiftLint, SwiftGen, Bitrise, GitLab-CI, and GitHub Actions.</b>
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Sr iOS Engineer - Sympla</h4>
+              <span>2017 — 2019</span>
+              <p class="timeline-text">
+                * Lead and develop, understand business requirements, deploy IOS apps, recommend and update functionality, performance, flexibility, and architecture, follow quality through development to provide easy-to-use apps.
+                <br />* Developed and released a new application related to a management platform that allows the organizer to manage events.
+                <br />
+                Key technologies and tools utilized included <b>Swift, Objective-C, Fastlane, Nimble, Quick, Bitrise, and GitLab CI.</b>
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Sr iOS Engineer - Mobilus</h4>
+              <span>2015 — 2017</span>
+              <p class="timeline-text">
+                * Leading and developing, understanding business needs, deployment, configuration, and updates as needed, architecture, quality testing, and presenting to clients to decide.
+                <br />* Implemented applications such as HiJob, Motoday, Olé Consignado (Santander Bank), Bonsucesso Bank, Inforuso, and others.
+              <br />
+              Key technologies and tools utilized included <b>Swift, Objective-C, Fastlane, Nimble and Quick.</b>
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Game Developer | Co-Founder - Umbu Games</h4>
+              <span>2015</span>
+              <p class="timeline-text"></p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Game Developer - Gaz Games and Meatballs</h4>
+              <span>2013 — 2014</span>
+              <p class="timeline-text">
+                Worked on the development of games and interactive applications.
+                <br />
+                Key technologies and tools utilized included <b>C#, Objective-C, C/C++.</b>
+              </p>
+            </li>
+
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Software Engineer - Telbrax</h4>
+              <span>2011 — 2013</span>
+              <p class="timeline-text">
+                Managed Windows and Linux servers, and SQL Server, Oracle, and MySQL databases. Developed applications to integrate the company's internal systems.
+                <br />
+                Key technologies and tools utilized included ASP.NET, JavaScript, T-SQL, C# and Bash.
+              </p>
             </li>
           </ol>
-
         </section>
+
+     
 
         <section class="skill">
 
